# chaos-scheduler

./: .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN-SYSTEM.md  LICENSE  README.md  SECURITY.md  commitlint.config.cjs  eslint.config.js  figma-tokens.json  figma.config.json  index.html  lefthook.yml  package-lock.json  package.json  playwright.a11y.config.ts  playwright.config.ts  playwright.visual.config.ts  release-please-config.json  rust-toolchain.toml  style-dictionary.config.mjs  tsconfig.app.json  tsconfig.figma.json  vite.config.ts  vitest.config.ts
.cursor/: hooks.json  mcp.json  mcp.remote.example.json
.cursor/rules/: chaos-scheduler.mdc  design-system.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
design/: divergence-ledger.md
docs/: RELEASING.md  VERSIONING.md  hardening-gap-closure-report.md
e2e/: accessibility.spec.ts  confirmations.spec.ts  dashboard-navigation.spec.ts  email-profiles.spec.ts  enqueue.spec.ts  global-history.spec.ts  integrations.spec.ts  mcp-integration.spec.ts  mission-control-tabs.spec.ts  popup.spec.ts  run-detail.spec.ts  update-ux.spec.ts  workflow-detail.spec.ts  workflow-editor.spec.ts  workflow-history.spec.ts  workflows-errors.spec.ts
scripts/: check-auto-merge-guard.mjs  check-auto-merge-guard.test.mjs  check-code-connect.mjs  check-code-connect.test.mjs  check-mcp-diff-attribute.mjs  check-mcp-diff-attribute.test.mjs  check-release-gating.mjs  check-release-gating.test.mjs  check-tauri-versions.mjs  check-tokens-fresh.mjs  check-tracked-mcp-config.mjs  check-tracked-mcp-config.test.mjs  figma-snapshot.mjs  figma-snapshot.test.mjs  figma-variables-sync.mjs  figma-variables-sync.test.mjs  gen-mcp-icon.mjs  gen-tray-icons.py  guard-latest-release.mjs  guard-latest-release.test.mjs  smoke-latest-json.mjs  smoke-mcp-install.mjs  validate-tokens.mjs  validate-tokens.test.mjs
src/: App.tsx  index.css  main.tsx  playwright-gate.ts
src-tauri/: CHANGELOG.md  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  api.rs  branding.rs  commands.rs  db.rs  email.rs  fix_cloud.rs  fix_local.rs  fix_worktree.rs  lib.rs  mcp.rs  operators.rs  scheduler.rs  service.rs  steps.rs  update.rs  workflow_spec.rs
src-tauri/tests/: updater_signature.rs
tokens/: color.palette.json  font.json  motion.json  radius.json  spacing.json  theme.dark.json  theme.light.json  typography.json
(+267 files in other folders)
