[package]
name = "chaos-labs-scheduler"
version = "1.0.1"
description = "Chaos Labs Scheduler - PM workflow automation for macOS"
authors = ["Laurence Duggan"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["full"] }
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
axum = "0.8.4"
tower-http = { version = "0.7.0", features = ["cors", "trace", "limit"] }
tower = "0.5.3"
lettre = { version = "0.11.19", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
rand = "0.9.4"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "blocking"] }
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
base64 = "0.22.1"
minisign-verify = "0.2.5"
tauri = { version = "2", features = ["tray-icon", "test"] }
